# speckitui

./: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/agents/: copilot-instructions.md  speckit.specfromdesc.agent.md
.github/prompts/: speckit.specfromdesc.prompt.md
.github/workflows/: release.yml
.specify/memory/: constitution.md
specs/001-speckitui-core/: data-model.md  description.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-nav-pane-redesign/: data-model.md  description.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fix-terminal-issues/: data-model.md  description.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ui-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-more-themes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: artifacts.rs  description.rs  file_watcher.rs  file_write.rs  git.rs  github.rs  mod.rs  network.rs  project.rs  settings.rs  shell_exec.rs  terminal.rs
src-tauri/src/models/: artifact.rs  mod.rs  project.rs  spec_instance.rs
src-tauri/src/services/: file_watcher.rs  git_status.rs  github_client.rs  mod.rs  network_monitor.rs  terminal_manager.rs
src/config/: agentConfig.ts  appThemes.ts  editorThemes.ts  markdownPreviewThemes.ts  terminalThemes.ts  themePresets.ts  (+1 more)
(+141 files in other folders)
