[package]
name = "speckitui"
version = "0.1.0"
description = "SpeckitUI - A desktop UI for spec-kit spec-driven development"
authors = ["SpeckitUI Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "speckitui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
notify = "6"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
